--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,41 +1,36 @@
-name: Deploy Backend to EC2
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["main"]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-and-deploy:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checkout the code from the repository
-      - name: Check out the code
-        uses: actions/checkout@v3
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
 
-      # Set up Java
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'  # Adjust this version if you need another Java version
-          distribution: 'temurin'
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-      # Build the .jar file using Maven
-      - name: Build the application
-        run: mvn clean install
-
-      # Set up SSH key for connecting to EC2
-      - name: Set up SSH key
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
         run: |
-          echo "${{ secrets.EC2_KEY }}" > ec2_key.pem
-          chmod 600 ec2_key.pem
-
-      # Copy the newly built .jar file to the EC2 instance
-      - name: Copy .jar file to EC2
-        run: |
-          scp -i ec2_key.pem target/FYPBack-1.0-SNAPSHOT.jar ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/FYPBack-1.0-SNAPSHOT.jar
-
-      # Restart the backend service on the EC2 instance
-      - name: Restart backend service on EC2
-        run: |
-          ssh -i ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "sudo systemctl restart backend"
+          echo Add other actions to build,
+          echo test, and deploy your project.
